# plexus-core

./: .gitignore  README.md  pyproject.toml
docs/source/: api.rst  conf.py  index.rst
examples/: README.md  advanced_sales_report.py  input_graph.json  input_script.py  run_compiler.py  run_decompiler.py
plexus_core/: __init__.py  __main__.py  compiler.py  decompiler.py  inspector.py
plexus_core/tools/: drawio_generator.py
tests/: logs.txt  test_all.py  test_complier.py  test_decompiler.py  test_inspector.py
