# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plexus-core"
version = "0.1.0"
authors = [{ name = "Aurélien Clairais", email = "aureclai.dev@gmail.com" }]
description = "The core AST compilation engine for the Plexus visual programming tool."
readme = "README.md"

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
